# sol-Rbac

./: .gitignore  README.md
UI/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
UI/app/: globals.css  layout.tsx  page.tsx  providers.tsx
UI/idl/: sol_rbac.json
UI/lib/: rbac.ts  tokenAcl.ts
rbac/: Anchor.toml  Cargo.toml
rbac/programs/rbac/: Cargo.toml
rbac/programs/rbac/src/: errors.rs  lib.rs  state.rs
rbac/programs/rbac/src/instructions/: assign_role.rs  create_org.rs  create_role.rs  create_token.rs  gate_can_freeze.rs  gate_can_thaw.rs  initialize_extra_metas.rs  initialize_global.rs  mod.rs  revoke_role.rs
rbac/tests/: rbac.ts
