[package]
name = "rbac"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rbac"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token_2022", "token_2022_extensions", "associated_token", "memo"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.6.0"